Needed setup complete with following features. Ready to practice.
- supporting python script: generating units and files with boilerplate code
- fetching of units and using in iframe.

--- a/index.html
+++ b/index.html
@@ -24,94 +24,8 @@
             </div>
         </div>
         <div id="middle">
-            <!-- TODO: Content of the article to be fetched from other html files and fed here -->
             <article>
-                <h2 id="unitName">Unit Name</h2>
-                <div id="someInformation">
-                    <p>Information like unit reading time with specified wpm and maybe other information too.</p>
-                </div>
-                <div id="unitBody">
-                    <h3>a section</h3>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                    <p>Its contents</p>
-                </div>
+                <iframe src="./unit01/index.html" frameborder="0" id="unitFrame"></iframe>
             </article>
         </div>
     </main>
