Added javascript to calculate the read time of the page

--- a/unit06/index.html
+++ b/unit06/index.html
@@ -11,13 +11,11 @@
     <div id="unit">
         <p><b>NOTE: This page is yet to be developed</b></p>  <!-- Remove this entire tag when starting to develop -->
         <h2 id="unitName">Square Roots & Cube Roots</h2>
-            <p></p>
-            <div id="someInformation"></div>  <!-- TODO: calculate and feed the reading time of the page -->
         <div id="unitBody">
             <h3>a section</h3>
             <p>Its contents</p>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./script.js" type="module"></script>
 </body>
 </html>
