unit01: CoverPage completed

--- a/unit01/index.html
+++ b/unit01/index.html
@@ -9,11 +9,22 @@
 </head>
 <body>
     <div id="unit">
-        <p><b>NOTE: This page is yet to be developed</b></p>  <!-- Remove this entire tag when starting to develop -->
         <h2 id="unitName">CoverPage</h2>
         <div id="unitBody">
-            <h3>a section</h3>
-            <p>Its contents</p>
+            <h3>Quantitative Aptitude</h3>
+            <p><cite>R.S. Aggarwal</cite></p>
+            <p>Published year: 1998</p>
+            <br>
+            <p>For Competitive Examinations</p>
+            <ul>
+                <li>Bank P.O.</li>
+                <li>Insurance (A.A.O.) - L.I.C., G.I.C.</li>
+                <li>Excise & Income Tax (Inspectors)</li>
+                <li>M.B.A., Hotel Management</li>
+                <li>C.B.I. (Sub-Inspectors); C.D.S.</li>
+                <li>Assistant Grade; Teachers' Examination</li>
+                <li>U.D.C. & Other competitive examinations</li>
+            </ul>
         </div>
     </div>
     <script src="./script.js" type="module"></script>
