--- a/unit01/index.html
+++ b/unit01/index.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CoverPage</title>
+    <script>
+        window.MathJax = {
+          tex: {
+            inlineMath: [['$', '$'], ['\(', '\)']], // Explicitly include $...$
+            displayMath: [['$$', '$$'], ['\[', '\]']]
+          },
+          options: {
+              skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre','code','annotation', 'annotation-xml'],
+              processEscapes: true
+          }
+        };
+    </script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../unitCommonStyles.css">
 </head>
 <body>
     <div id="unit">
+        <p><b>NOTE: This page is yet to be developed</b></p>  <!-- Remove this entire tag when starting to develop -->
         <h2 id="unitName">CoverPage</h2>
         <div id="unitBody">
-            <h3>Quantitative Aptitude</h3>
-            <p><cite>R.S. Aggarwal</cite></p>
-            <p>Published year: 1998</p>
-            <br>
-            <p>For Competitive Examinations</p>
-            <ul>
-                <li>Bank P.O.</li>
-                <li>Insurance (A.A.O.) - L.I.C., G.I.C.</li>
-                <li>Excise & Income Tax (Inspectors)</li>
-                <li>M.B.A., Hotel Management</li>
-                <li>C.B.I. (Sub-Inspectors); C.D.S.</li>
-                <li>Assistant Grade; Teachers' Examination</li>
-                <li>U.D.C. & Other competitive examinations</li>
-            </ul>
+            <h3>a section</h3>
+            <p>Its contents</p>
         </div>
     </div>
     <script src="./script.js" type="module"></script>
