--- a/unit33/index.html
+++ b/unit33/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odd man out & Series</title>
+    <script>
+        window.MathJax = {
+          tex: {
+            inlineMath: [['$', '$'], ['\(', '\)']], // Explicitly include $...$
+            displayMath: [['$$', '$$'], ['\[', '\]']]
+          },
+          options: {
+              skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre','code','annotation', 'annotation-xml'],
+              processEscapes: true
+          }
+        };
+    </script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../unitCommonStyles.css">
 </head>
