--- a/unit02/index.html
+++ b/unit02/index.html
@@ -19,6 +19,7 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../unitCommonStyles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/default.min.css">    
 </head>
 <body>
     <div id="unit">
@@ -53,10 +54,32 @@
                     <span class="answer">Solution: </span>
                     <p>Product of unit's digits in given numbers = $(6 \times 7 \times 9 \times 2) = 756$.</p>
                     <p>$\therefore$ Unit digit in the given product is 6.</p>
+                    <hr>
+                    <div class="srcFile">
+                        <a href="script.js" target="_blank" class="programLink">./script.js</a>
+                        <pre><code class="language-javascript"></code></pre>
+                    </div>
                 </div>
             </div>
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 2: </span></p>
+                    <p></p>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <p></p>
+                    <hr>
+                    <div class="srcFile">
+                        <a href="script.js" target="_blank" class="programLink">./script.js</a>
+                        <pre><code class="language-javascript"></code></pre>
+                    </div>
+                </div>
+            </div>  <!-- example -->
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/languages/Javascript.min.js"></script>
     <script src="./script.js" type="module"></script>
 </body>
 </html>
