--- a/unit31/index.html
+++ b/unit31/index.html
@@ -19,6 +19,7 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../unitCommonStyles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/default.min.css">
 </head>
 <body>
     <div id="unit">
@@ -29,6 +30,8 @@
             <p>Its contents</p>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/languages/Javascript.min.js"></script>
     <script src="./script.js" type="module"></script>
 </body>
 </html>
