Unit02: example005 completed with some CSS styling

--- a/unit02/index.html
+++ b/unit02/index.html
@@ -259,6 +259,32 @@
                     </div>
                 </div>
             </div>  <!-- example -->
+            <h3>Tests of divisibility:</h3>
+            <dl>
+                <dt>Divisibility by 2:</dt>
+                <dd>A number is divisible by 2, if its unit digit is any of 0, 2, 4, 6, 8.</dd>
+                <dt>Divisibility by 3:</dt>
+                <dd>A number is divisible by 3, if the sum of its digits is divisible by 3.</dd>
+            </dl>
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 5: </span></p>
+                    <p>Which of the following numbers is not divisible by 2?</p>
+                    <p>3567516, 9130525, 7870832, 1371594</p>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <p>Clearly, the unit's digit of 9130525 is 5, which is not divisble by 2.</p>
+                    <p>So, 9130525 is not divisble by 2.</p>
+                    <p>Each one of the other numbers has a unit digit divisble by 2.</p>
+                    <p>So, each one other than 9130525 is divisible by 2.</p>
+                    <hr>
+                    <div class="srcFile">
+                        <a href="example005.js" target="_blank" class="programLink">./example005.js</a>
+                        <pre><code class="language-javascript"></code></pre>
+                    </div>
+                </div>
+            </div>  <!-- example -->
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
