Unit02: example006 completed

--- a/unit02/index.html
+++ b/unit02/index.html
@@ -285,6 +285,32 @@
                     </div>
                 </div>
             </div>  <!-- example -->
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 6: </span></p>
+                    <p>Which of the following numbers is divisible by 3?</p>
+                    <ol type="i">
+                        <li>541326</li>
+                        <li>5967013</li>
+                    </ol>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <ol type="i">
+                        <li>Sum of digits in 541326 is 21, which is divisible by 3.
+                            <p>So, 541326 is divisible by 3.</p>
+                        </li>
+                        <li>Sum of digits in 5967013 is 31, which is not divisible by 3.
+                            <p>Hence, 5967013 is not divisible by 3.</p>
+                        </li>
+                    </ol>
+                    <hr>
+                    <div class="srcFile">
+                        <a href="example006.js" target="_blank" class="programLink">./example006.js</a>
+                        <pre><code class="language-javascript"></code></pre>
+                    </div>
+                </div>
+            </div>  <!-- example -->
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
