Unit02: example010 completed

--- a/unit02/index.html
+++ b/unit02/index.html
@@ -240,16 +240,16 @@
                         </li>
                         <li>Clearly, $16 > \sqrt{241}$.
                             <p>Prime numbers less than 16 are 2, 3, 5, 7, 11, 13.</p>
-                            <p>241 is not divisble by any of them.</p>
+                            <p>241 is not divisible by any of them.</p>
                             <p>$\therefore$ 241 is a prime number.</p>
                         </li>
                         <li>Clearly, $19 > \sqrt{337}$.
                             <p>Prime numbers less than 19 are 2, 3, 5, 7, 11, 13, 17.</p>
-                            <p>337 is not divisble by any of them.</p>
+                            <p>337 is not divisible by any of them.</p>
                             <p>$\therefore$ 337 is a prime number.</p></li>
                         <li>Clearly, $20 > \sqrt{391}$.
                             <p>Prime numbers less than 20 are 2, 3, 5, 7, 11, 13, 17, 19.</p>
-                            <p>391 is divisble by 17.</p>
+                            <p>391 is divisible by 17.</p>
                             <p>$\therefore$ 391 is not a prime number.</p></li>
                     </ol>
                     <hr>
@@ -274,9 +274,9 @@
                 </div>
                 <div class="ProblemSolution">
                     <span class="answer">Solution: </span>
-                    <p>Clearly, the unit's digit of 9130525 is 5, which is not divisble by 2.</p>
-                    <p>So, 9130525 is not divisble by 2.</p>
-                    <p>Each one of the other numbers has a unit digit divisble by 2.</p>
+                    <p>Clearly, the unit's digit of 9130525 is 5, which is not divisible by 2.</p>
+                    <p>So, 9130525 is not divisible by 2.</p>
+                    <p>Each one of the other numbers has a unit digit divisible by 2.</p>
                     <p>So, each one other than 9130525 is divisible by 2.</p>
                     <hr>
                     <div class="srcFile">
@@ -307,6 +307,116 @@
                     <hr>
                     <div class="srcFile">
                         <a href="example006.js" target="_blank" class="programLink">./example006.js</a>
+                        <pre><code class="language-javascript"></code></pre>
+                    </div>
+                </div>
+            </div>  <!-- example -->
+            <dl>
+                <dt>Divisibility by 9:</dt>
+                <dd>A number is divisible by 9, if the sum of its digits is divisible by 9.</dd>
+            </dl>
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 7: </span></p>
+                    <p>Which of the following numbers is divisible by 9?</p>
+                    <ol type="i">
+                        <li>19725462</li>
+                        <li>36870521</li>
+                    </ol>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <ol type="i">
+                        <li>Sum of digits in 19725462 is 36, which is divisible by 9.
+                            <p>So, the given number is divisible by 9.</p>
+                        </li>
+                        <li>Sum of digits in 36870521 is 32, which is not divisible by 9.
+                            <p>So, the given number is not divisible by 9.</p>
+                        </li>
+                    </ol>
+                    <hr>
+                    <div class="srcFile">
+                        <a href="example007.js" target="_blank" class="programLink">./example007.js</a>
+                        <pre><code class="language-javascript"></code></pre>
+                    </div>
+                </div>
+            </div>  <!-- example -->
+            <dl>
+                <dt>Divisibility by 4:</dt>
+                <dd>A number is divisible by 4, if the number formed by the last two digits is divisible by 4.</dd>
+            </dl>
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 8: </span></p>
+                    <p>Which of the following numbers is divisible by 4?</p>
+                    <ol type="i">
+                        <li>67920594</li>
+                        <li>618703572</li>
+                    </ol>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <ol type="i">
+                        <li>The number formed by the last two digits in the given number is 94, which is not divisible by 4.
+                            <p>$\therefore$ 67920594 is not divisible by 4.</p>
+                        </li>
+                        <li>The number formed by the last two digits in the given number is 72, which is divisible by 4.
+                            <p>$\therefore$ 618703572 is divisible by 4.</p>
+                        </li>
+                    </ol>
+                    <hr>
+                    <div class="srcFile">
+                        <a href="example008.js" target="_blank" class="programLink">./example008.js</a>
+                        <pre><code class="language-javascript"></code></pre>
+                    </div>
+                </div>
+            </div>  <!-- example -->
+            <dl>
+                <dt>Divisibility by 8:</dt>
+                <dd>A number is divisible by 8, if the number formed by the last three digits is divisible by 8.</dd>
+            </dl>
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 9: </span></p>
+                    <p>Which of the following numbers is divisible by 8?</p>
+                    <ol type="i">
+                        <li>98016542</li>
+                        <li>106598304</li>
+                    </ol>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <ol type="i">
+                        <li>The number formed by the last three digits in the given number is 542, which is not divisible by 8.
+                            <p>$\therefore$ 98016542 is not divisible by 8.</p>
+                        </li>
+                        <li>The number formed by the last three digits in the given number is 304, which is divisible by 8.
+                            <p>$\therefore$ 106598304 is divisible by 8.</p>
+                        </li>
+                    </ol>
+                    <hr>
+                    <div class="srcFile">
+                        <a href="example009.js" target="_blank" class="programLink">./example009.js</a>
+                        <pre><code class="language-javascript"></code></pre>
+                    </div>
+                </div>
+            </div>  <!-- example -->
+            <dl>
+                <dt>Divisibility by 11:</dt>
+                <dd>A number is divisible by 11, if the difference of the sum of its digits at odd places and sum of its digits at even places, is either 0 or a number divisible by 11.</dd>
+            </dl>
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 10: </span></p>
+                    <p>Show that the number 4832718 is divisible by 11.</p>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <p>(Sum of digits at odd places) - (Sum of digits at even places) = [(8 + 7 + 3 + 4) - (1 + 2 + 8)] = 11, which is divisible by 11.</p>
+                    <p>$\therefore$ 4832718 is divisible by 11.</p>
+                    <hr>
+                    <div class="srcFile">
+                        <a href="example010.js" target="_blank" class="programLink">./example010.js</a>
                         <pre><code class="language-javascript"></code></pre>
                     </div>
                 </div>
