Unit02: example 12 completed

--- a/unit02/index.html
+++ b/unit02/index.html
@@ -421,6 +421,37 @@
                     </div>
                 </div>
             </div>  <!-- example -->
+            <dl>
+                <dt>Co-Prime:</dt>
+                <dd>
+                    <p>Two numbers are said to be co-prime, if their H.C.F. is 1.<br>e.g. (2, 3), (4, 5), (7, 9), (8, 11) etc. are co-primes.</p>
+                </dd>
+            </dl>
+            <p><b>An Important Note:</b> A number is divisible by $ab$ only when that number is divisible by each one of $a$ and $b$, where $a$ and $b$ are co-prime.</p>
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 11: </span></p>
+                    <p>If a number is divisible by 4 and 6 , is it always divisible by 24? Why? Give an example.</p>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <p>No, since 6 and 4 are not co-prime.</p>
+                    <p>36 is divisible by 6 as well as 4 but it is not divisible by 24.</p>
+                </div>
+            </div>  <!-- example -->
+            <div class="example">
+                <div class="ProblemDescription">
+                    <p><span class="question">Example 12: </span></p>
+                    <p>Without actual division show that 52563744 is divisible by 24.</p>
+                </div>
+                <div class="ProblemSolution">
+                    <span class="answer">Solution: </span>
+                    <p>$24 = 3 \times 8$, where 3 and 8 are co-prime.</p>
+                    <p>The sum of the digits in given number is 36, which is divisible by 3. So, the give number is divisible by 3.</p>
+                    <p>The number formed by the last 3-digits of the given number is 744, which is divisible by 9. So, the given number is divisible by 8.</p>
+                    <p>Thus, the given number is divisible by both 3 and 8, where 3 and 8 are co-prime. So, it is divisible by $3 \times 8$, i.e. 24.</p>
+                </div>
+            </div>  <!-- example -->
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
